2020-03-04  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in (package debuginfod): Remove Requires: rpm.
	Add Requires: dpkg.

2020-01-12  Frank Ch. Eigler  <fche@redhat.com>

	* elfutils.spec.in: Typo fix for "Requires: debuginfod-client".

2020-01-11  Frank Ch. Eigler  <fche@redhat.com>

	* debuginfod.service: Set PrivateTmp=yes.

2020-01-01  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (pkgconfig_DATA): Conditionalize libdebuginfod.pc
	on DEBUGINFOD.

2019-12-22  Frank Ch. Eigler  <fche@redhat.com>

	* elfutils.spec.in (debuginfod): Add BuildRequire dpkg
	for deb testing.  (Available on Fedora & EPEL, not base RHEL.)

2019-12-05  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Add explicit version-release requires for all
	packages.

2019-11-28  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in (debuginfod): Add an explicit Requires
	elfutils-debuginfod-client.

2019-11-27  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Move all versioned libdebuginfod libraries
	from debuginfod-client-devel to debuginfod-client.

2019-11-26  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Remove Group tags, remove fedora and rhel
	specifics, introduce elfutils-libs subpackage, move Requires
	and BuildRequires around for new subpackage, remove dot at end
	of Summary tags, add post/postun ldconfig for libs and
	debuginfod-client, remove default defattr(-,root,root) for file
	lists, order binaries by name.

2019-11-25  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in: Add BuildRequires curl.

2019-10-28  Frank Ch. Eigler  <fche@redhat.com>

	* eu.am (AM_CXXFLAGS): Clone & amend AM_CFLAGS for c++11 code.
	* debuginfod.service, debuginfod.sysconfig: New files: systemd.
	* Makefile.am: Install them.
	* elfutils.spec.in: Add debuginfod and debuginfod-client subrpms.

2019-08-29  Mark Wielaard  <mark@klomp.org>

	* elfutils.spec.in (%description devel): Remove libebl text.
	(%install): Don't touch backend lib.*.so* files.