@@ -1,3 +1,7 @@
+2020-03-26  Frank Ch. Eigler <fche@redhat.com>
+
+	* run-debuginfod-find.sh: Look for bsdtar instead of dpkg.
+
 2020-03-26  Frank Ch. Eigler  <fche@redhat.com>
 
 	* run-debuginfod-find.sh: Check for bsdtar zstd capability
