@@ -1,3 +1,7 @@
+2020-03-25  Frank Ch. Eigler <fche@redhat.com>
+
+	* elfutils.spec.in: *Require: bsdtar instead of dpkg.
+
 2020-03-04  Mark Wielaard  <mark@klomp.org>
 
 	* elfutils.spec.in (package debuginfod): Remove Requires: rpm.
